force-app/main/default/objects/Bidder_Detail__c/Bidder_Detail__c.object-meta.xml
<CustomObject>
    <label>Bidder Detail</label>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Bidder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidder Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>