force-app/main/default/objects/Bidder_Detail__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>IF(ISBLANK(Bid_Contact__c), Mechanical_Contractor__r.Owner.FirstName + &quot; &quot; + Mechanical_Contractor__r.Owner.LastName, Bid_Contact__r.Account.Owner.FirstName + &quot; &quot; +Bid_Contact__r.Account.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>