force-app/main/default/objects/Bidder_Detail__c/fields/Bid_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Contact (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bidder Details</relationshipLabel>
    <relationshipName>Bidder_Details</relationshipName>
    <type>Lookup</type>
</CustomField>