force-app/main/default/objects/Bidder_Detail__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <formula>IF( hasNotes__c,HYPERLINK(&quot;/apex/CreditNotes?Id=&quot; +   IF(ISBLANK(Bid_Contact__c), Mechanical_Contractor__c, Bid_Contact__r.AccountId) , &quot;Notes&quot;,&apos;_blank&apos;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Notes</label>
    <type>Text</type>
</CustomField>