force-app/main/default/objects/Bidder_Detail__c/fields/hasNotes__c.field-meta.xml
<CustomField>
    <fullName>hasNotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasNotes</label>
    <type>Checkbox</type>
</CustomField>