force-app/main/default/objects/Bidder_Detail__c/fields/Mechanical_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanical Contractor (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bidder Details</relationshipLabel>
    <relationshipName>Bidder_Details</relationshipName>
    <type>Lookup</type>
</CustomField>