force-app/main/default/objects/Bidder_Detail__c/fields/Mechanical_Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Contractor_Account__c</fullName>
    <formula>HYPERLINK(IF(ISBLANK(Bid_Contact__c),&quot;/&quot;+ Mechanical_Contractor__r.Id, &quot;/&quot;+Bid_Contact__r.AccountId) ,IF(ISBLANK(Bid_Contact__c),Mechanical_Contractor__r.Name, Bid_Contact__r.Account.Name)  ,&quot;__blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mechanical Contractor (Account)</label>
    <type>Text</type>
</CustomField>