force-app/main/default/objects/Bidder_Detail__c/fields/Won_Lost_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Bidding__c</fullName>
    <inlineHelpText>Did this MC win the bid?</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Not Bidding</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Quote Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>